[tool.poetry]
name = "nautobot-helm-charts"
version = "0.1.0"
description = "Helm Charts used to deploy Nautobot"
authors = ["Network to Code, LLC <info@networktocode.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "*"
# Rendering docs to HTML
mkdocs = "~1.4.2"
# Material for MkDocs theme
mkdocs-material = "9.1.15"
# Render custom markdown for version added/changed/remove notes
mkdocs-version-annotations = "1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
